# anything-important

./: .env.example  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
anything_important/: auth.py  config.py  gmail.py  llm.py  main.py  telegram.py
docs/superpowers/plans/: 2026-04-26-anything-important.md
docs/superpowers/specs/: 2026-05-01-llm-example-subjects-design.md  2026-05-05-reporting-loop-design.md
tests/: test_auth.py  test_config.py  test_gmail.py  test_llm.py  test_main.py  test_telegram.py
