[project]
name = "anything-important"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "google-auth[requests]>=2.30.0",
    "httpx>=0.27.0",
]

[project.scripts]
anything-important = "anything_important.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
